<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_upload"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Discard"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="388dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:srcCompat="@tools:sample/backgrounds/scenic[8]" />

    <Button
        android:id="@+id/button_discard"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/Uploading"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_upload"
        app:layout_constraintEnd_toStartOf="@+id/button_upload" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="56dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="92dp"
        android:text="@string/Camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editCamera"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pic_description"
        android:layout_width="383dp"
        android:layout_height="233dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="92dp"
        android:text="@string/picture_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSetting" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="44dp"
        android:text="@string/Picture"
        app:layout_constraintBottom_toTopOf="@+id/editSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editSetting"
        android:layout_width="75dp"
        android:layout_height="24dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CameraModel"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/pic_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>